# Ising

./: CMakeLists.txt  ising.py  main.cu  plot_ising.py
